# personal-job-market-tracker

./: .gitignore  LICENSE  README.md  browse.py  config.py  main.py  pyproject.toml  run.py
.claude/: settings.local.json
dashboard/: app.py
extractor/: matcher.py  skills.yaml
scrapers/: base.py  jobteaser.py  studerendeonline.py
storage/: db.py  models.py
